...
    <KeyboardAvoidingView
      style={[styles.container, { backgroundColor: BG }]}
      behavior={Platform.OS === "ios" ? "padding" : "height"}
    >
      {/* Header */}
      <ScreenHeader
        title="Editar perfil"
        onBack={() => router.back()}
        border={false}
      />

      <ScrollView
        contentContainerStyle={styles.scroll}
...
