appId: com.toqe.mobile
---
- launchApp
- tapOn: "Email"
- inputText: "joao@example.com"
- tapOn: "Senha"
- inputText: "senha123"
- tapOn: "Entrar"
- assertVisible: "Bem-vindo"
- tapOn:
    id: "menu-button"
- tapOn: "Sair"
- assertVisible: "Email"
